--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,9 +43,9 @@
   --chart-3: 340 82% 52%;
   --chart-4: 43 74% 50%;
   --chart-5: 160 84% 39%;
-  --font-sans: Open Sans, sans-serif;
+  --font-sans: Inter, system-ui, -apple-system, sans-serif;
   --font-serif: Georgia, serif;
-  --font-mono: Menlo, monospace;
+  --font-mono: 'JetBrains Mono', 'Consolas', monospace;
   --radius: .5rem;
   --shadow-2xs: 0px 2px 0px 0px hsl(0 0% 0% / 0.00);
   --shadow-xs: 0px 2px 0px 0px hsl(0 0% 0% / 0.00);
